netpol_and.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-pod-c
spec:
  podSelector:
    matchLabels:
      run: pod-c
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: full-pod-a
      namespaceSelector:
          matchLabels:
            acesso: liberado
    ports:
      - protocol: TCP
        port: 80
